Estilização da página serviços-prestados com padronização visual e classes CSS

--- a/servicos-prestados.html
+++ b/servicos-prestados.html
@@ -16,11 +16,11 @@
             <a href="contato.html">Contato</a>
         </nav>
     </header>
-    <main>
-        <h1>Serviços Já Prestados</h1>
+    <main class="pagina-conteudo">
+        <main class="pagina-conteudo">
 
         <section>
-            <h2>Programa Frango Vida</h2>
+            <h2 class="subtitulo-secao">Programa Frango Vida</h2>
             <p>
                 A SECAF participou ativamente do Programa Frango Vida, promovendo a capacitação e estruturação de pequenos produtores familiares na criação de aves.
                 O programa garantiu a instalação de unidades de produção com acompanhamento técnico, orientação sanitária e incentivos para comercialização.
@@ -29,7 +29,7 @@
         </section>
 
         <section>
-            <h2>Assistência Técnica no Assentamento Itamaraty</h2>
+            <h2 class="subtitulo-secao">Assistência Técnica no Assentamento Itamaraty</h2>
             <p>
                 O Assentamento Itamaraty, um dos maiores do país, recebeu apoio contínuo da SECAF com assistência técnica agrícola e gestão rural.
                 Realizamos diagnósticos produtivos, orientações sobre crédito fundiário, treinamentos sobre boas práticas agrícolas e regularização ambiental.
@@ -38,7 +38,7 @@
         </section>
 
         <section>
-            <h2>Programa ATER Mulheres nas Aldeias Bororó e Jaguapiru</h2>
+            <h2 class="subtitulo-secao">Programa ATER Mulheres nas Aldeias Bororó e Jaguapiru</h2>
             <p>
                 Em parceria com instituições públicas, a SECAF executou o programa ATER Mulheres, levando apoio técnico e formação para mulheres indígenas
                 das aldeias Bororó e Jaguapiru. O foco foi o fortalecimento da agricultura familiar, empreendedorismo feminino e segurança alimentar.
