Estilização da página serviços-prestados com padronização visual e classes CSS

--- a/recuperacao.html
+++ b/recuperacao.html
@@ -16,14 +16,14 @@
       <a href="contato.html">Contato</a>
     </nav>
   </header>
-  <main>
-    <h1>Recuperação de Áreas Degradadas</h1>
+  <main class="pagina-conteudo">
+    <h1 class="titulo-secao">Recuperação de Áreas Degradadas</h1>
     <p>A SECAF atua de forma técnica e estratégica na recuperação de áreas degradadas e alteradas (RAD), promovendo o restabelecimento da funcionalidade ambiental, produtiva e paisagística dos ecossistemas afetados.</p>
 
-    <h2>O que são Áreas Degradadas?</h2>
+    <h2 class="subtitulo-secao">O que são Áreas Degradadas?</h2>
     <p>São espaços que perderam sua capacidade produtiva, ecológica ou paisagística devido a práticas inadequadas como desmatamento, uso excessivo de agroquímicos, erosão, queimadas, mineração, pastoreio excessivo ou descarte incorreto de resíduos.</p>
 
-    <h2>Objetivos da Recuperação</h2>
+    <h2 class="subtitulo-secao">Objetivos da Recuperação</h2>
     <ul>
       <li>Restabelecer o equilíbrio ecológico do solo, água e vegetação;</li>
       <li>Garantir a conservação dos recursos naturais e da biodiversidade;</li>
@@ -32,30 +32,30 @@
       <li>Evitar multas e embargos ambientais junto a órgãos fiscalizadores.</li>
     </ul>
 
-    <h2>Serviços de Recuperação Realizados pela SECAF</h2>
+    <h2 class="subtitulo-secao">Serviços de Recuperação Realizados pela SECAF</h2>
 
-    <h3>1. Diagnóstico Ambiental e Levantamento de Impactos</h3>
+    <h3 class="subtitulo-secao">1. Diagnóstico Ambiental e Levantamento de Impactos</h3>
     <p>Análise técnica da área degradada, solo, vegetação, recursos hídricos e uso anterior para propor soluções viáveis.</p>
 
-    <h3>2. Elaboração de Projetos de Recuperação (PRAD)</h3>
+    <h3 class="subtitulo-secao">2. Elaboração de Projetos de Recuperação (PRAD)</h3>
     <p>Desenvolvimento de Projeto de Recuperação de Áreas Degradadas (PRAD) conforme exigência de órgãos ambientais, incluindo cronograma, orçamento, metas e metodologias.</p>
 
-    <h3>3. Recomposição de Vegetação Nativa</h3>
+    <h3 class="subtitulo-secao">3. Recomposição de Vegetação Nativa</h3>
     <p>Plantio de mudas nativas, enriquecimento de capoeiras, nucleação ecológica, adubação verde e reflorestamento com espécies adaptadas ao bioma local.</p>
 
-    <h3>4. Controle de Erosão e Conservação do Solo</h3>
+    <h3 class="subtitulo-secao">4. Controle de Erosão e Conservação do Solo</h3>
     <p>Implantação de curvas de nível, terraços, paliçadas, barreiras vegetativas, cobertura morta, adubação orgânica e técnicas de manejo conservacionista.</p>
 
-    <h3>5. Recuperação de Nascentes e Matas Ciliares</h3>
+    <h3 class="subtitulo-secao">5. Recuperação de Nascentes e Matas Ciliares</h3>
     <p>Isolamento de áreas de APP, revegetação de margens de rios, construção de barraginhas e proteção de fontes de água.</p>
 
-    <h3>6. Reabilitação de Áreas de Mineração</h3>
+    <h3 class="subtitulo-secao">6. Reabilitação de Áreas de Mineração</h3>
     <p>Aplicação de técnicas específicas para reconfiguração do relevo, correção química e física do solo, revegetação e monitoramento pós-implantação.</p>
 
-    <h3>7. Monitoramento e Manutenção</h3>
+    <h3 class="subtitulo-secao">7. Monitoramento e Manutenção</h3>
     <p>Serviço de acompanhamento técnico da área recuperada com relatórios periódicos, replantios, controle de pragas e manutenção da estrutura implantada.</p>
 
-    <h2>Metodologias Utilizadas</h2>
+    <h2 class="subtitulo-secao">Metodologias Utilizadas</h2>
     <ul>
       <li>Revegetação Natural Assistida (RNA);</li>
       <li>Plantio Direto de Espécies Nativas (PDEN);</li>
@@ -63,13 +63,13 @@
       <li>Uso de bioinsumos, inoculantes e matéria orgânica para melhoria do solo.</li>
     </ul>
 
-    <h2>Normas e Referenciais Técnicos</h2>
+    <h2 class="subtitulo-secao">Normas e Referenciais Técnicos</h2>
     <p>Trabalhamos com base na legislação ambiental vigente (Código Florestal, CONAMA, SEMA/IBAMA), planos de bacias hidrográficas, CAR, PRADs e Zoneamentos Ecológico-Econômicos (ZEE).</p>
 
-    <h2>Atuação Estratégica</h2>
+    <h2 class="subtitulo-secao">Atuação Estratégica</h2>
     <p>A SECAF atende propriedades privadas, áreas públicas, empreendimentos sujeitos a licenciamento ambiental e programas de compensação. Atuamos em parceria com prefeituras, associações, ONGs e empresas.</p>
 
-    <h2>Entre em Contato</h2>
+    <h2 class="subtitulo-secao">Entre em Contato</h2>
     <p>Fale com nossa equipe técnica e receba um plano de recuperação personalizado para sua área. Juntos, podemos transformar áreas degradadas em territórios produtivos, sustentáveis e ambientalmente corretos.</p>
   </main>
   <footer class="rodape">
