Estilização da página serviços-prestados com padronização visual e classes CSS

--- a/certificados.html
+++ b/certificados.html
@@ -17,8 +17,8 @@
         </nav>
     </header>
 
-    <main>
-        <h1>Certificados e Reconhecimentos</h1>
+    <main class="pagina-conteudo">
+        <h1 class="titulo-secao">Certificados e Reconhecimentos</h1>
         <p>A SECAF orgulha-se de seu compromisso com a excelência no atendimento às demandas da agricultura familiar. Ao longo dos anos, acumulamos certificações e reconhecimentos que refletem nossa dedicação, competência técnica e integridade nos serviços prestados.</p>
 
         <h2>Certificações Técnicas</h2>
@@ -28,14 +28,14 @@
             <li><strong>Capacitações e cursos de atualização:</strong> Nossa equipe participa periodicamente de cursos e treinamentos oferecidos por instituições como SENAR, EMBRAPA, INCRA, e universidades.</li>
         </ul>
 
-        <h2>Reconhecimentos e Parcerias</h2>
+        <h2 class="titulo-secao">Reconhecimentos e Parcerias</h2>
         <ul>
             <li><strong>Parceria com Prefeituras Municipais:</strong> A SECAF possui convênios com diversas prefeituras para elaboração de projetos técnicos em chamadas públicas, assistência técnica e planejamento territorial.</li>
             <li><strong>Atuação aprovada junto ao Banco do Brasil, Caixa Econômica e demais instituições financeiras:</strong> Projetos financiáveis elaborados com aprovação e histórico de sucesso.</li>
             <li><strong>Reconhecimento do MDA e INCRA:</strong> Participação ativa em programas como PNCF (Plano Nacional de Crédito Fundiário), com excelente índice de aprovação técnica.</li>
         </ul>
 
-        <h2>Prêmios Locais</h2>
+        <h2 class="titulo-secao">Prêmios Locais</h2>
         <ul>
             <li>Reconhecimento em Câmaras Municipais pelo serviço prestado à agricultura familiar.</li>
             <li>Premiações em feiras e eventos agrícolas por boas práticas de desenvolvimento sustentável.</li>
