--- a/contato.html
+++ b/contato.html
@@ -14,7 +14,7 @@
       <a href="contato.html">Contato</a>
     </nav>
   </header>
-  <main>
+  <main class="pagina-conteudo">
     <form action="mailto:seuemail@seudominio.com" method="POST" enctype="multipart/form-data">
   <label for="nome">Nome:</label><br>
   <input type="text" id="nome" name="nome" required><br><br>
@@ -30,7 +30,7 @@
 
   <button type="submit">Enviar</button>
 </form>
-    <h1>Entre em Contato</h1>
+    <h1 class="titulo-secao">Entre em Contato</h1>
     <p>Telefone: (67) 99913-7089</p>
     <p>WhatsApp: (67) 99615-0411</p>
     <p>E-mail: andersonsouzasecaf@gmail.com</p>
