--- a/credito-rural.html
+++ b/credito-rural.html
@@ -16,16 +16,16 @@
       <a href="contato.html">Contato</a>
     </nav>
   </header>
-  <main>
-    <h1>Crédito Rural</h1>
+  <main class="pagina-conteudo">
+    <h1 class="titulo-secao">Crédito Rural</h1>
     <p>O Crédito Rural é uma política pública essencial para o desenvolvimento da agropecuária nacional, proporcionando recursos para custeio, investimento, comercialização e industrialização da produção agropecuária.</p>
 
-    <h2>Objetivo</h2>
+    <h2 class="titulo-secao">Objetivo</h2>
     <p>Incentivar a produção agrícola e pecuária com financiamento acessível, promovendo modernização, aumento de produtividade e melhoria na renda dos produtores rurais.</p>
 
-    <h2>Modalidades de Crédito Rural</h2>
+    <h2 class="titulo-secao">Modalidades de Crédito Rural</h2>
 
-    <h3>1. PRONAF (Programa Nacional de Fortalecimento da Agricultura Familiar)</h3>
+    <h3 class="titulo-secao">1. PRONAF (Programa Nacional de Fortalecimento da Agricultura Familiar)</h3>
     <p>Voltado para agricultores familiares, com condições facilitadas e juros reduzidos.</p>
     <ul>
       <li><strong>PRONAF Custeio:</strong> Para despesas com plantio, manejo e colheita.</li>
@@ -35,58 +35,58 @@
       <li><strong>PRONAF Semiárido:</strong> Financiamento de atividades em regiões semiáridas.</li>
     </ul>
 
-    <h3>2. PRONAMP (Programa Nacional de Apoio ao Médio Produtor Rural)</h3>
+    <h3 class="titulo-secao">2. PRONAMP (Programa Nacional de Apoio ao Médio Produtor Rural)</h3>
     <p>Voltado a médios produtores com renda bruta anual de até R$ 2,4 milhões.</p>
     <ul>
       <li>Taxas de juros mais atrativas.</li>
       <li>Crédito para custeio e investimento.</li>
     </ul>
 
-    <h3>3. MODERFROTA</h3>
+    <h3 class="titulo-secao">3. MODERFROTA</h3>
     <p>Programa de Modernização da Frota de Tratores Agrícolas e Colheitadeiras.</p>
     <ul>
       <li>Financiamento de tratores, colheitadeiras, pulverizadores e demais máquinas.</li>
       <li>Prazo de até 7 anos com carência de 1 ano.</li>
     </ul>
 
-    <h3>4. INOVAGRO</h3>
+    <h3 class="titulo-secao">4. INOVAGRO</h3>
     <p>Estimula o uso de tecnologias modernas para aumentar a produtividade.</p>
     <ul>
       <li>Investimentos em automação, conectividade, softwares de gestão rural, etc.</li>
     </ul>
 
-    <h3>5. ABC+ (Programa Agricultura de Baixo Carbono)</h3>
+    <h3 class="titulo-secao">5. ABC+ (Programa Agricultura de Baixo Carbono)</h3>
     <p>Financia práticas sustentáveis e tecnologias que reduzam emissões de carbono.</p>
     <ul>
       <li>Recuperação de pastagens, integração lavoura-pecuária-floresta, plantio direto, etc.</li>
     </ul>
 
-    <h3>6. PRODECOOP</h3>
+    <h3 class="titulo-secao">6. PRODECOOP</h3>
     <p>Destinado a cooperativas agropecuárias para agregar valor à produção dos associados.</p>
 
-    <h3>7. PROCAFÉ</h3>
+    <h3 class="titulo-secao">7. PROCAFÉ</h3>
     <p>Voltado ao setor cafeeiro para investimentos em reestruturação, renovação e custeio da produção de café.</p>
 
-    <h3>8. PROIRRIGA</h3>
+    <h3 class="titulo-secao">8. PROIRRIGA</h3>
     <p>Financiamento de sistemas de irrigação e infraestrutura hídrica em propriedades rurais.</p>
 
-    <h3>9. PCA (Programa para Construção e Ampliação de Armazéns)</h3>
+    <h3 class="titulo-secao">9. PCA (Programa para Construção e Ampliação de Armazéns)</h3>
     <p>Crédito para construção e ampliação de armazéns nas propriedades ou cooperativas.</p>
 
-    <h3>10. PRODETER</h3>
+    <h3 class="titulo-secao">10. PRODETER</h3>
     <p>Programa de Desenvolvimento Territorial que apoia cadeias produtivas locais com foco no desenvolvimento regional.</p>
 
-    <h2>Quem pode acessar o Crédito Rural?</h2>
+    <h2 class="titulo-secao">Quem pode acessar o Crédito Rural?</h2>
     <ul>
       <li>Agricultores familiares (via PRONAF)</li>
       <li>Médios produtores (via PRONAMP)</li>
       <li>Grandes produtores e cooperativas</li>
     </ul>
 
-    <h2>Como acessar?</h2>
+    <h2 class="titulo-secao">Como acessar?</h2>
     <p>Procure uma instituição financeira autorizada (como Banco do Brasil, Caixa, Sicredi, Sicoob ou cooperativas) e apresente um projeto técnico elaborado por um engenheiro agrônomo ou técnico habilitado. A SECAF pode auxiliar com todo o processo.</p>
 
-    <h2>Fale conosco</h2>
+    <h2 class="titulo-secao">Fale conosco</h2>
     <p>Entre em contato para saber qual linha de crédito se encaixa melhor no seu perfil. A equipe da SECAF está pronta para te ajudar!</p>
   </main>
   <footer class="rodape">
