--- a/irrigacao.html
+++ b/irrigacao.html
@@ -16,11 +16,11 @@
       <a href="contato.html">Contato</a>
     </nav>
   </header>
-  <main>
-    <h1>Sistemas de Irrigação</h1>
+  <main class="pagina-conteudo">
+    <h1 class="titulo-secao">Sistemas de Irrigação</h1>
     <p>A irrigação é uma técnica fundamental para garantir a produtividade agrícola, principalmente em regiões de clima seco ou em períodos de estiagem. Conheça os principais tipos de irrigação utilizados no Brasil:</p>
 
-    <h2>1. Irrigação por Aspersão</h2>
+    <h2 class="titulo-secao">1. Irrigação por Aspersão</h2>
     <p>Simula a chuva ao lançar água sob pressão no ar. Ideal para pastagens, hortaliças, grãos e culturas de ciclo curto.</p>
     <ul>
       <li><strong>Convencional:</strong> Utiliza aspersores móveis ou fixos.</li>
@@ -28,30 +28,30 @@
       <li><strong>Cânions ou Carretéis:</strong> Dispositivos móveis com alta pressão, indicados para lavouras extensas.</li>
     </ul>
 
-    <h2>2. Irrigação Localizada</h2>
+    <h2 class="titulo-secao">2. Irrigação Localizada</h2>
     <p>Aplicação de água diretamente na raiz da planta, com economia de água e maior eficiência.</p>
     <ul>
       <li><strong>Gotejamento:</strong> Libera gotas na base de cada planta. Ideal para hortas, fruticultura e áreas com escassez hídrica.</li>
       <li><strong>Microaspersão:</strong> Jatos de baixa pressão cobrindo pequenas áreas. Excelente para viveiros, estufas e canteiros.</li>
     </ul>
 
-    <h2>3. Irrigação por Superfície</h2>
+    <h2 class="titulo-secao">3. Irrigação por Superfície</h2>
     <p>Distribuição de água pela gravidade em sulcos ou lâminas sobre o solo.</p>
     <ul>
       <li><strong>Sulcos:</strong> Canaletas por onde a água escorre entre as linhas de cultivo.</li>
       <li><strong>Inundação:</strong> Utilizada principalmente em arroz irrigado, cobrindo toda a superfície.</li>
     </ul>
 
-    <h2>4. Irrigação Subterrânea</h2>
+    <h2 class="titulo-secao">4. Irrigação Subterrânea</h2>
     <p>Instalação de tubos gotejadores abaixo da superfície. Reduz perdas por evaporação e evita umidade excessiva na superfície.</p>
 
-    <h2>5. Irrigação Automática com Sensores</h2>
+    <h2 class="titulo-secao">5. Irrigação Automática com Sensores</h2>
     <p>Utiliza tecnologia com sensores de umidade, clima e programação. Reduz desperdício e aumenta a eficiência.</p>
 
-    <h2>Escolha do Sistema Ideal</h2>
+    <h2 class="titulo-secao">Escolha do Sistema Ideal</h2>
     <p>A escolha depende de fatores como tipo de solo, cultura, disponibilidade hídrica, topografia e investimento disponível.</p>
 
-    <h2>Consultoria Técnica</h2>
+    <h2 class="titulo-secao">Consultoria Técnica</h2>
     <p>A SECAF oferece projetos personalizados de irrigação, levando em consideração a viabilidade econômica, técnica e ambiental de cada propriedade. Entre em contato conosco para agendar uma visita técnica.</p>
   </main>
   <footer class="rodape">
