--- a/laudos.html
+++ b/laudos.html
@@ -16,37 +16,37 @@
       <a href="contato.html">Contato</a>
     </nav>
   </header>
-  <main>
-    <h1>Laudos Técnicos Agrícolas</h1>
+  <main class="pagina-conteudo>
+    <h1 class="titulo-secao">Laudos Técnicos Agrícolas</h1>
     <p>A SECAF realiza diversos tipos de laudos técnicos essenciais para comprovação, avaliação, perícia e viabilidade de atividades rurais. Esses documentos são fundamentais para garantir segurança jurídica, acessar políticas públicas e formalizar operações agrícolas.</p>
 
-    <h2>Principais Laudos Oferecidos</h2>
+    <h2 class="titulo-secao">Principais Laudos Oferecidos</h2>
 
-    <h3>1. Laudo de Aptidão Agrícola</h3>
+    <h3 class="titulo-secao">1. Laudo de Aptidão Agrícola</h3>
     <p>Identifica o potencial produtivo da propriedade de acordo com as características do solo, relevo e clima. Usado para comprovação de viabilidade em projetos de crédito e regularização fundiária.</p>
 
-    <h3>2. Laudo de Vistoria Técnica</h3>
+    <h3 class="titulo-secao">2. Laudo de Vistoria Técnica</h3>
     <p>Documento que relata as condições atuais de determinada área ou benfeitoria rural. Muito usado para fiscalização, concessão de crédito ou validação de projetos em execução.</p>
 
-    <h3>3. Laudo de Avaliação de Imóvel Rural</h3>
+    <h3 class="titulo-secao">3. Laudo de Avaliação de Imóvel Rural</h3>
     <p>Determina o valor de mercado de uma propriedade rural considerando sua localização, infraestrutura, acesso, uso do solo, benfeitorias e produtividade. Utilizado em processos de compra, venda, financiamento e herança.</p>
 
-    <h3>4. Laudo Pericial Agrícola</h3>
+    <h3 class="titulo-secao">4. Laudo Pericial Agrícola</h3>
     <p>Elaborado por peritos judiciais ou extrajudiciais, com objetivo de avaliar danos, perdas, litígios ou qualquer demanda técnica no meio rural. Necessário em processos judiciais ou administrativos.</p>
 
-    <h3>5. Laudo de Viabilidade Técnica e Econômica</h3>
+    <h3 class="titulo-secao">5. Laudo de Viabilidade Técnica e Econômica</h3>
     <p>Apresenta a análise do retorno financeiro de um projeto agropecuário, considerando custos, receitas e prazos. Muito solicitado em projetos de crédito rural e propostas a fundos de investimento.</p>
 
-    <h3>6. Laudo de Cobertura Vegetal e Uso do Solo</h3>
+    <h3 class="titulo-secao">6. Laudo de Cobertura Vegetal e Uso do Solo</h3>
     <p>Analisa e comprova o uso atual e histórico da cobertura vegetal da propriedade, fundamental para regularização ambiental, CAR e licenciamentos.</p>
 
-    <h3>7. Laudo de Implantação de Sistemas de Irrigação</h3>
+    <h3 class="titulo-secao">7. Laudo de Implantação de Sistemas de Irrigação</h3>
     <p>Relata a capacidade hídrica, necessidade da cultura e dimensionamento do sistema de irrigação proposto. Essencial para acesso a financiamentos de irrigação.</p>
 
-    <h3>8. Laudo de Conformidade Ambiental</h3>
+    <h3 class="titulo-secao">8. Laudo de Conformidade Ambiental</h3>
     <p>Verifica se a propriedade rural está em conformidade com as exigências ambientais, como áreas de reserva legal, APPs, e práticas conservacionistas.</p>
 
-    <h2>Atendimento Técnico Especializado</h2>
+    <h2 class="titulo-secao">Atendimento Técnico Especializado</h2>
     <p>Todos os laudos são elaborados por engenheiros com registro profissional e emitidos com Anotação de Responsabilidade Técnica (ART), garantindo legalidade e validade jurídica.</p>
 
     <p>Entre em contato com a SECAF para solicitar o laudo ideal para sua necessidade. Atendemos produtores, associações, cooperativas, instituições financeiras, escritórios de advocacia e órgãos públicos.</p>
