--- a/piqueteamento.html
+++ b/piqueteamento.html
@@ -16,11 +16,11 @@
       <a href="contato.html">Contato</a>
     </nav>
   </header>
-  <main>
-    <h1>Piqueteamento e Manejo Inteligente de Pastagens</h1>
+  <main class="pagina-conteudo">
+    <h1 class="titulo-secao">Piqueteamento e Manejo Inteligente de Pastagens</h1>
     <p>O piqueteamento é uma técnica estratégica de divisão de pastagens em áreas menores chamadas piquetes, permitindo o manejo rotacionado, recuperação do capim e o aumento significativo da produtividade animal por hectare.</p>
 
-    <h2>Benefícios do Piqueteamento</h2>
+    <h2 class="titulo-secao">Benefícios do Piqueteamento</h2>
     <ul>
       <li>Melhor aproveitamento da pastagem e do solo;</li>
       <li>Aumento da taxa de lotação e da produção de carne ou leite por área;</li>
@@ -29,37 +29,37 @@
       <li>Recuperação natural da pastagem entre ciclos de pastejo.</li>
     </ul>
 
-    <h2>Serviços de Piqueteamento da SECAF</h2>
+    <h2 class="titulo-secao">Serviços de Piqueteamento da SECAF</h2>
 
-    <h3>1. Planejamento da Divisão de Áreas</h3>
+    <h3 class="titulo-secao">1. Planejamento da Divisão de Áreas</h3>
     <p>Análise técnica do relevo, tipo de solo, topografia, drenagem, tipo de pasto e número de animais para definir a melhor estratégia de divisão e rotatividade.</p>
 
-    <h3>2. Dimensionamento do Número e Tamanho dos Piquetes</h3>
+    <h3 class="titulo-secao">2. Dimensionamento do Número e Tamanho dos Piquetes</h3>
     <p>Definimos o número ideal de piquetes com base na capacidade de suporte da forrageira, ciclo de pastejo e tempo de descanso, garantindo equilíbrio entre oferta e consumo.</p>
 
-    <h3>3. Implantação de Cercas e Corredores</h3>
+    <h3 class="titulo-secao">3. Implantação de Cercas e Corredores</h3>
     <p>Instalação de cercas fixas ou elétricas, corredores de manejo, divisões internas e pontos estratégicos de acesso à água, mineralização e sombreamento.</p>
 
-    <h3>4. Sistemas de Pastejo</h3>
+    <h3 class="titulo-secao">4. Sistemas de Pastejo</h3>
     <ul>
       <li><strong>Rotacionado Intensivo (Voisin):</strong> Alta lotação com manejo intensivo e maior controle.</li>
       <li><strong>Alternado:</strong> Utiliza dois ou mais piquetes em rodízio simples.</li>
       <li><strong>Contínuo com ajustes:</strong> Uma área única com lotação ajustada periodicamente.</li>
     </ul>
 
-    <h3>5. Manejo e Recuperação de Pastagens</h3>
+    <h3 class="titulo-secao">5. Manejo e Recuperação de Pastagens</h3>
     <p>Serviços complementares como adubação de correção e manutenção, controle de invasoras, sobressemeadura, descompactação do solo e ressemeadura de espécies forrageiras.</p>
 
-    <h3>6. Implantação de Sistema Silvipastoril (ILPF)</h3>
+    <h3 class="titulo-secao">6. Implantação de Sistema Silvipastoril (ILPF)</h3>
     <p>Integração entre árvores, pastagem e gado, com piqueteamento adaptado para produção diversificada, conforto animal e melhoria ambiental.</p>
 
-    <h2>Tecnologia e Sustentabilidade</h2>
+    <h2 class="titulo-secao">Tecnologia e Sustentabilidade</h2>
     <p>Trabalhamos com georreferenciamento, softwares de dimensionamento de piquetes, e técnicas de baixo impacto ambiental. Nossos projetos valorizam a conservação do solo, a eficiência do manejo e o bem-estar animal.</p>
 
-    <h2>Para quem é indicado?</h2>
+    <h2 class="titulo-secao">Para quem é indicado?</h2>
     <p>Produtores de gado de corte, leite, ovinos, caprinos e até cavalos que buscam produtividade, organização e sustentabilidade na propriedade.</p>
 
-    <h2>Resultados Esperados</h2>
+    <h2 class="titulo-secao">Resultados Esperados</h2>
     <ul>
       <li>Aumento de até 3 vezes na produção por hectare;</li>
       <li>Redução do custo com alimentação concentrada;</li>
@@ -67,7 +67,7 @@
       <li>Maior vida útil das pastagens implantadas.</li>
     </ul>
 
-    <h2>Fale com a SECAF</h2>
+    <h2 class="titulo-secao">Fale com a SECAF</h2>
     <p>Nossa equipe técnica está pronta para transformar sua pastagem com inteligência, técnica e resultado. Solicite seu projeto de piqueteamento personalizado com a SECAF!</p>
   </main>
   <footer class="rodape">
