--- a/projetos-prefeitura.html
+++ b/projetos-prefeitura.html
@@ -16,19 +16,19 @@
       <a href="contato.html">Contato</a>
     </nav>
   </header>
-  <main>
-    <h1>Projetos para Prefeituras</h1>
+  <main class="pagina-conteudo">
+    <h1 class="titulo-secao">Projetos para Prefeituras</h1>
     <p>A SECAF atua como parceira estratégica de prefeituras e secretarias municipais no desenvolvimento, execução e acompanhamento de projetos voltados ao meio rural, meio ambiente e infraestrutura agrícola. Nosso foco é proporcionar soluções técnicas, sustentáveis e eficientes para políticas públicas no campo.</p>
 
-    <h2>O que a SECAF pode oferecer para Prefeituras</h2>
+    <h2 class="titulo-secao">O que a SECAF pode oferecer para Prefeituras</h2>
 
-    <h3>1. Elaboração de Projetos Técnicos Rurais</h3>
+    <h2 class="titulo-secao">1. Elaboração de Projetos Técnicos Rurais</h3>
     <p>Projetos de apoio à agricultura familiar, mecanização agrícola, abastecimento de água, revitalização de estradas vicinais e outras demandas específicas do setor rural municipal.</p>
 
-    <h3>2. Chamadas Públicas e Convênios</h3>
+    <h3 class="titulo-secao">2. Chamadas Públicas e Convênios</h3>
     <p>Apoio na elaboração e execução de chamadas públicas para aquisição de produtos da agricultura familiar (PNAE, PAA), bem como para celebração de convênios com o Governo Federal, Estadual e instituições privadas.</p>
 
-    <h3>3. Planos Municipais</h3>
+    <h3 class="titulo-secao">3. Planos Municipais</h3>
     <ul>
       <li><strong>Plano Municipal de Desenvolvimento Rural Sustentável</strong></li>
       <li><strong>Plano Municipal de Saneamento Básico Rural</strong></li>
@@ -36,28 +36,28 @@
       <li><strong>Plano de Combate à Desertificação e Recuperação de Áreas Degradadas</strong></li>
     </ul>
 
-    <h3>4. Projetos Ambientais</h3>
+    <h3 class="titulo-secao">4. Projetos Ambientais</h3>
     <p>Desenvolvimento de ações e planos voltados à educação ambiental, recuperação de nascentes, reflorestamento de áreas públicas, manejo de resíduos sólidos rurais e conservação de solo e água.</p>
 
-    <h3>5. Assistência Técnica e Extensão Rural (ATER)</h3>
+    <h3 class="titulo-secao">5. Assistência Técnica e Extensão Rural (ATER)</h3>
     <p>Implantação de serviços de ATER em parceria com secretarias municipais e associações, capacitando pequenos produtores e fortalecendo a cadeia produtiva local.</p>
 
-    <h3>6. Projetos de Irrigação Coletiva</h3>
+    <h3 class="titulo-secao">6. Projetos de Irrigação Coletiva</h3>
     <p>Desenvolvimento de projetos comunitários de irrigação com foco em áreas periurbanas e assentamentos rurais. Elaboração técnica completa com viabilidade hidráulica, econômica e ambiental.</p>
 
-    <h3>7. Capacitações e Cursos Técnicos</h3>
+    <h3 class="titulo-secao">7. Capacitações e Cursos Técnicos</h3>
     <p>Execução de cursos e treinamentos para agricultores, técnicos da prefeitura, professores e lideranças comunitárias em temas como agroecologia, segurança alimentar, manejo de culturas, gestão da propriedade rural e associativismo.</p>
 
-    <h3>8. Acompanhamento de Obras e Execução de Projetos</h3>
+    <h3 class="titulo-secao">8. Acompanhamento de Obras e Execução de Projetos</h3>
     <p>Supervisão técnica e acompanhamento de obras públicas voltadas ao campo, como perfuração de poços, construção de barragens, casas de farinha, galpões de produção, viveiros e feiras livres.</p>
 
-    <h3>9. Acesso a Recursos e Editais</h3>
+    <h3 class="titulo-secao">9. Acesso a Recursos e Editais</h3>
     <p>Captação de recursos por meio de projetos apresentados a editais públicos e privados, como MAPA, MDA, ANA, FUNASA, Itaipu Binacional, SEBRAE, entre outros.</p>
 
-    <h3>10. Regularização Fundiária e Ambiental</h3>
+    <h3 class="titulo-secao">10. Regularização Fundiária e Ambiental</h3>
     <p>Auxílio em processos de CAR, CCIR, INCRA, e georreferenciamento para regularização de propriedades municipais e apoio aos agricultores locais.</p>
 
-    <h2>Equipe Multidisciplinar</h2>
+    <h3 class="titulo-secao">Equipe Multidisciplinar</h2>
     <p>Contamos com engenheiros agrônomos, florestais, civis, técnicos agrícolas, ambientalistas e especialistas em políticas públicas para oferecer soluções integradas.</p>
 
     <p>Entre em contato e conheça nossos modelos de parceria com prefeituras. A SECAF está pronta para ajudar seu município a crescer com sustentabilidade e eficiência no campo.</p>
