Estilização da página serviços-prestados com padronização visual e classes CSS

--- a/laudos.html
+++ b/laudos.html
@@ -16,8 +16,9 @@
       <a href="contato.html">Contato</a>
     </nav>
   </header>
-  <main class="pagina-conteudo>
-    <h1 class="titulo-secao">Laudos Técnicos Agrícolas</h1>
+  <main class="pagina-conteudo">
+  
+    <h1 class="titulo-secao">Técnicos Agrícolas</h1>
     <p>A SECAF realiza diversos tipos de laudos técnicos essenciais para comprovação, avaliação, perícia e viabilidade de atividades rurais. Esses documentos são fundamentais para garantir segurança jurídica, acessar políticas públicas e formalizar operações agrícolas.</p>
 
     <h2 class="titulo-secao">Principais Laudos Oferecidos</h2>
