Estilização da página serviços-prestados com padronização visual e classes CSS

--- a/certificados.html
+++ b/certificados.html
@@ -21,7 +21,7 @@
         <h1 class="titulo-secao">Certificados e Reconhecimentos</h1>
         <p>A SECAF orgulha-se de seu compromisso com a excelência no atendimento às demandas da agricultura familiar. Ao longo dos anos, acumulamos certificações e reconhecimentos que refletem nossa dedicação, competência técnica e integridade nos serviços prestados.</p>
 
-        <h2>Certificações Técnicas</h2>
+        <h2 class="titulo-secao">Certificações Técnicas</h2>
         <ul>
             <li><strong>Registro no CREA:</strong> Nossa equipe técnica é devidamente registrada no Conselho Regional de Engenharia e Agronomia, garantindo conformidade legal e qualidade dos projetos executados.</li>
             <li><strong>ARTs (Anotações de Responsabilidade Técnica):</strong> Todos os projetos elaborados pela SECAF são acompanhados de ART, assegurando a responsabilidade técnica do profissional habilitado.</li>
