--- a/contato.html
+++ b/contato.html
@@ -15,29 +15,48 @@
     </nav>
   </header>
   <main class="pagina-conteudo">
+  <h1 class="titulo-secao">Entre em Contato</h1>
+
+  <div class="formulario-contato">
     <form action="mailto:seuemail@seudominio.com" method="POST" enctype="multipart/form-data">
-  <label for="nome">Nome:</label><br>
-  <input type="text" id="nome" name="nome" required><br><br>
+      <label for="nome">Nome:</label>
+      <input type="text" id="nome" name="nome" required>
 
-  <label for="email">E-mail:</label><br>
-  <input type="email" id="email" name="email" required><br><br>
+      <label for="email">E-mail:</label>
+      <input type="email" id="email" name="email" required>
 
-  <label for="mensagem">Mensagem:</label><br>
-  <textarea id="mensagem" name="mensagem" rows="4" required></textarea><br><br>
+      <label for="mensagem">Mensagem:</label>
+      <textarea id="mensagem" name="mensagem" rows="4" required></textarea>
 
-  <label for="arquivo">Anexar documento (PDF, JPG ou PNG):</label><br>
-  <input type="file" id="arquivo" name="arquivo" accept=".pdf, image/jpeg, image/png"><br><br>
+      <label for="arquivo">Anexar documento (PDF, JPG ou PNG):</label>
+      <input type="file" id="arquivo" name="arquivo" accept=".pdf, image/jpeg, image/png">
 
-  <button type="submit">Enviar</button>
-</form>
-    <h1 class="titulo-secao">Entre em Contato</h1>
-    <p>Telefone: (67) 99913-7089</p>
-    <p>WhatsApp: (67) 99615-0411</p>
-    <p>E-mail: andersonsouzasecaf@gmail.com</p>
-    <p>E-mail: hawlysonac@gmail.com</p>
-    <p>Endereço: Rua Pedro Rigotti, 930 - Dourados / MS</p>
-    <p>Cep: 79.810-120</p>
-  </main>
+      <button type="submit">Enviar</button>
+    </form>
+  </div>
+
+  <div class="info-contato">
+    <h2 class="subtitulo-secao">Informações de Contato</h2>
+    <p><strong>Telefone:</strong> (67) 99913-7089</p>
+    <p><strong>WhatsApp:</strong> (67) 99615-0411</p>
+    <p><strong>E-mail 1:</strong> andersonsouzasecaf@gmail.com</p>
+    <p><strong>E-mail 2:</strong> hawlysonac@gmail.com</p>
+    <p><strong>Endereço:</strong> Rua Pedro Rigotti, 930 - Dourados / MS</p>
+    <p><strong>CEP:</strong> 79.810-120</p>
+  </div>
+
+  <div class="mapa-localizacao">
+    <h2 class="subtitulo-secao">Como Chegar</h2>
+    <iframe 
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3679.529830568126!2d-54.81965502473943!3d-22.748359931129456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9489f3ac6fc20a39%3A0xa137f1a4cc3c896e!2sRua%20Pedro%20Rigotti%2C%20930%20-%20Jardim%20Roriz%2C%20Dourados%20-%20MS%2C%2079810-120!5e0!3m2!1spt-BR!2sbr!4v1716400000000!5m2!1spt-BR!2sbr" 
+      width="100%" 
+      height="350" 
+      style="border:0;" 
+      allowfullscreen="" 
+      loading="lazy" 
+      referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </div>
+</main>
   <footer class="rodape">
   <div class="rodape-container">
     <div class="rodape-coluna">
