--- a/contato.html
+++ b/contato.html
@@ -48,7 +48,7 @@
   <div class="mapa-localizacao">
     <h2 class="subtitulo-secao">Como Chegar</h2>
     <iframe 
-      src="/www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3679.529830568126!2d-54.81965502473943!3d-22.748359931129456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9489f3ac6fc20a39%3A0xa137f1a4cc3c896e!2sRua%20Pedro%20Rigotti%2C%20930%20-%20Jardim%20Roriz%2C%20Dourados%20-%20MS%2C%2079810-120!5e0!3m2!1spt-BR!2sbr!4v1716400000000!5m2!1spt-BR!2sbr"
+      src="https://maps.app.goo.gl/NMdAgcuEXnPinB6h9"
       width="100%" 
       height="350" 
       style="border:0;" 
