SEO completo: meta tags e títulos otimizados para todas as páginas internas de serviços

--- a/certificados.html
+++ b/certificados.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <title>Certificados e Reconhecimentos - SECAF</title>
     <link rel="stylesheet" href="style.css">
+     <meta charset="UTF-8">
+  <title>Certificados e Reconhecimentos - SECAF</title>
+  <meta name="description" content="Conheça os prêmios, selos, certificados e reconhecimentos conquistados pela SECAF ao longo da sua trajetória no agro.">
+  <meta name="keywords" content="certificados SECAF, premiações, reconhecimentos, consultoria premiada, agricultura familiar, destaque no agro">
+  <meta name="author" content="Renato Ferreira da Cruz">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
