--- a/contato.html
+++ b/contato.html
@@ -2,7 +2,14 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Contato - SECAF</title>
+  <title>Contato - Fale com a SECAF</title>
+  <link rel="stylesheet" href="style.css">
+   <meta charset="UTF-8">
+  <title>Contato - Fale com a SECAF</title>
+  <meta name="description" content="Entre em contato com a SECAF. Atendimento via WhatsApp, e-mail e formulário. Localizada em Dourados - MS.">
+  <meta name="keywords" content="contato SECAF, WhatsApp SECAF, e-mail SECAF, localização, consultoria rural MS">
+  <meta name="author" content="Renato Ferreira da Cruz">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
