--- a/credito-fundiario.html
+++ b/credito-fundiario.html
@@ -3,8 +3,15 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <title>Crédito Fundiário</title>
+  <title>Crédito Fundiário - SECAF</title>
   <link rel="stylesheet" href="style.css" />
+   <meta charset="UTF-8">
+  <title>Crédito Fundiário - SECAF</title>
+  <meta name="description" content="Consultoria e elaboração de projetos de crédito fundiário para agricultores familiares. A SECAF auxilia em todas as etapas do programa.">
+  <meta name="keywords" content="crédito fundiário, PNCF, projetos de terra, SECAF, agricultura familiar, regularização fundiária">
+  <meta name="author" content="Renato Ferreira da Cruz">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
