--- a/credito-rural.html
+++ b/credito-rural.html
@@ -3,8 +3,15 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <title>Crédito Rural</title>
+  <title>Crédito Rural - SECAF</title>
   <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+  <title>Crédito Rural - SECAF</title>
+  <meta name="description" content="Elaboração de projetos para obtenção de crédito rural como Pronaf, Pronamp, Moderfrota e outros. Assessoria completa com a SECAF.">
+  <meta name="keywords" content="crédito rural, Pronaf, Pronamp, Moderfrota, SECAF, financiamento agro, projetos técnicos">
+  <meta name="author" content="Renato Ferreira da Cruz">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
