--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>SECAF - Início</title>
+  <title>SECAF - Consultoria para Agricultura Familiar</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <meta charset="UTF-8">
+  <title>SECAF - Consultoria para Agricultura Familiar</title>
+  <meta name="description" content="Consultoria e assessoria técnica especializada para agricultores familiares. Projetos de crédito fundiário, crédito rural, assistência técnica e mais.">
+  <meta name="keywords" content="agricultura familiar, crédito fundiário, assistência técnica, projetos rurais, SECAF, Dourados MS, consultoria agro">
+  <meta name="author" content="Renato Ferreira da Cruz">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
