--- a/irrigacao.html
+++ b/irrigacao.html
@@ -3,8 +3,15 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <title>Irrigação</title>
+  <title>Irrigação e conservação de Solo - SECAF</title>
   <link rel="stylesheet" href="style.css" />
+   <meta charset="UTF-8">
+  <title>Irrigação e Conservação de Solo - SECAF</title>
+  <meta name="description" content="Projetos de irrigação e conservação de solo para propriedades rurais. Consultoria técnica especializada com a SECAF.">
+  <meta name="keywords" content="irrigação, conservação de solo, projetos agrícolas, agricultura sustentável, SECAF, assistência técnica">
+  <meta name="author" content="Renato Ferreira da Cruz">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
