--- a/laudos.html
+++ b/laudos.html
@@ -3,8 +3,15 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <title>Laudos Técnicos</title>
+  <title>Laudos Técnicos - SECAF</title>
   <link rel="stylesheet" href="style.css" />
+   <meta charset="UTF-8">
+  <title>Laudos Técnicos e Periciais - SECAF</title>
+  <meta name="description" content="Vistorias e emissão de laudos técnicos e periciais para crédito rural, regularização ambiental e comprovações técnicas.">
+  <meta name="keywords" content="laudos técnicos, vistoria agrícola, perícia rural, SECAF, assistência técnica, análise de solo">
+  <meta name="author" content="Renato Ferreira da Cruz">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
