--- a/piqueteamento.html
+++ b/piqueteamento.html
@@ -3,8 +3,15 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <title>Piqueteamento e Manejo de Pastagens</title>
+  <title>Piqueteamento e Manejo de Pastagens - SECAF</title>
   <link rel="stylesheet" href="style.css" />
+   <meta charset="UTF-8">
+  <title>Piqueteamento e Divisão de Pastagens - SECAF</title>
+  <meta name="description" content="Serviço técnico de piqueteamento para manejo eficiente de pastagens. Aumente a produtividade com suporte da SECAF.">
+  <meta name="keywords" content="piqueteamento, manejo de pasto, pastagem rotacionada, pecuária sustentável, SECAF, consultoria rural">
+  <meta name="author" content="Renato Ferreira da Cruz">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
