--- a/projetos-prefeitura.html
+++ b/projetos-prefeitura.html
@@ -3,8 +3,15 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <title>Projetos para Prefeituras</title>
+  <title>Projetos para Prefeituras - SECAF</title>
   <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>Consultoria para Prefeituras - SECAF</title>
+  <meta name="description" content="Elaboração de projetos e assessoria técnica para prefeituras em editais, convênios e programas ligados ao setor agrícola.">
+  <meta name="keywords" content="consultoria para prefeituras, projetos agro, SECAF, convênios, assistência técnica institucional">
+  <meta name="author" content="Renato Ferreira da Cruz">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
