--- a/recuperacao.html
+++ b/recuperacao.html
@@ -3,8 +3,15 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <title>Recuperação de Áreas</title>
+  <title>Recuperação de Áreas Degradadas - SECAF</title>
   <link rel="stylesheet" href="style.css" />
+   <meta charset="UTF-8">
+  <title>Recuperação de Áreas Degradadas - SECAF</title>
+  <meta name="description" content="Planos de recuperação de áreas degradadas com base em análises técnicas e exigências ambientais. Regularize com a SECAF.">
+  <meta name="keywords" content="recuperação ambiental, áreas degradadas, PRA, SECAF, planos de recuperação, sustentabilidade no campo">
+  <meta name="author" content="Renato Ferreira da Cruz">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
