--- a/seguros-agricolas.html
+++ b/seguros-agricolas.html
@@ -3,8 +3,15 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8" />
-    <title>Seguros Agrícolas - SECAF</title>
+    <title>Seguros Agrícolas - Proteja sua produção com a SECAF</title>
     <link rel="stylesheet" href="style.css" />
+     <meta charset="UTF-8">
+  <title>Seguros Agrícolas - Proteja sua produção com a SECAF</title>
+  <meta name="description" content="Conheça os tipos de seguros agrícolas oferecidos pela SECAF: produtividade, faturamento, custeio, pecuário e mais.">
+  <meta name="keywords" content="seguros agrícolas, seguro rural, SECAF, proteção agrícola, subvenção, consultoria agro">
+  <meta name="author" content="Renato Ferreira da Cruz">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
