--- a/servicos-prestados.html
+++ b/servicos-prestados.html
@@ -3,8 +3,15 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Serviços Já Prestados - SECAF</title>
+    <title>Serviços Já Prestados - Resutados da SECAF</title>
     <link rel="stylesheet" href="style.css">
+     <meta charset="UTF-8">
+  <title>Serviços Já Prestados - Resultados da SECAF</title>
+  <meta name="description" content="Veja os projetos e atividades já realizados pela SECAF em várias regiões do Brasil, promovendo o fortalecimento da agricultura familiar.">
+  <meta name="keywords" content="serviços prestados, projetos realizados, agricultura familiar, assistência técnica, SECAF, histórico">
+  <meta name="author" content="Renato Ferreira da Cruz">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
