--- a/servicos.html
+++ b/servicos.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <title>Serviços - SECAF</title>
     <link rel="stylesheet" href="style.css">
+      <meta charset="UTF-8">
+  <title>Serviços - SECAF</title>
+  <meta name="description" content="Veja todos os serviços oferecidos pela SECAF: crédito rural, crédito fundiário, irrigação, laudos, consultoria para prefeituras e mais.">
+  <meta name="keywords" content="serviços rurais, crédito rural, crédito fundiário, SECAF, assistência técnica, irrigação, consultoria agro">
+  <meta name="author" content="Renato Ferreira da Cruz">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header>
