--- a/sobre.html
+++ b/sobre.html
@@ -3,7 +3,14 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Sobre a SECAF</title>
+  <title>Sobre a SECAF - História missão e valores</title>
+  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Sobre a SECAF - História, Missão e Valores</title>
+  <meta name="description" content="Conheça a história, missão, visão e valores da SECAF. Consultoria especializada para o desenvolvimento sustentável da agricultura familiar.">
+  <meta name="keywords" content="sobre SECAF, história, missão, valores, agricultura familiar, assistência técnica rural">
+  <meta name="author" content="Renato Ferreira da Cruz">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
