SEO completo: meta tags e títulos otimizados para todas as páginas internas de serviços

--- a/sobre.html
+++ b/sobre.html
@@ -25,12 +25,12 @@
   </nav>
 </header>
 
-<main style="max-width: 1100px; margin: 0 auto; padding: 30px 20px;">
-  <h1>Sobre a SECAF</h1>
+<main class="pagina-conteudo">
+  <h1 class="titulo-secao">Sobre a SECAF</h1>
   <p>A SECAF (Serviços de Consultoria e Assessoria para Agricultura Familiar) nasceu em 2007...</p>
   <p>Ao longo dos anos, a SECAF construiu uma trajetória marcada...</p>
 
-  <h2>Nossa História</h2>
+  <h2 class="titulo-secao">Nossa História</h2>
   <p>Iniciamos com projetos de crédito fundiário e assistência técnica...</p>
   <ul>
     <li>Elaboração de projetos técnicos de irrigação e conservação de solo;</li>
@@ -42,13 +42,13 @@
     <li>Seguros agrícolas e gestão de riscos no campo.</li>
   </ul>
 
-  <h2>Nossa Missão</h2>
+  <h2 class="titulo-secao">Nossa Missão</h2>
   <p>Promover o desenvolvimento sustentável da agricultura familiar...</p>
 
-  <h2>Nossa Visão</h2>
+  <h2 class="titulo-secao">Nossa Visão</h2>
   <p>Ser referência nacional em consultoria rural...</p>
 
-  <h2>Nossos Valores</h2>
+  <h2 class="titulo-secao">Nossos Valores</h2>
   <ul>
     <li>Compromisso com o produtor rural</li>
     <li>Ética e transparência</li>
