Ajuste no cabeçalho: fundo na cor padrão da SECAF e logo ampliada

--- a/servicos.html
+++ b/servicos.html
@@ -23,8 +23,8 @@
         <a href="contato.html">Contato</a>
     </nav>
 </header>
-<main>
-    <h1>Serviços Prestados</h1>
+<main class="pagina-conteudo">
+    <h1 class="titulo-secao">Serviços Prestados</h1>
     <div class="botoes-servicos">
         <a href="credito-fundiario.html"><button>Crédito Fundiário</button></a>
         <a href="credito-rural.html"><button>Crédito Rural</button></a>
