Adiciona imagem para página de certificados rurais

--- a/certificados.html
+++ b/certificados.html
@@ -49,7 +49,9 @@
         </ul>
 
         <p>Esses reconhecimentos são fruto do esforço contínuo em oferecer serviços com ética, competência e comprometimento social. Continuamos avançando para transformar o campo com responsabilidade e inovação.</p>
-    </main>
+    
+       <e/main>
+    <img src="images/certificados.png" alt="Imagem relacionada a certificados" style="display: block; margin: 20px auto; width: 50%;">
 
     <footer class="rodape">
   <div class="rodape-container">
