Adiciona imagem ilustrativa do crédito fundiário e atualiza HTML com seção de imagem

--- a/credito-fundiario.html
+++ b/credito-fundiario.html
@@ -25,6 +25,10 @@
   </header>
   <main class="pagina-conteudo">
     <h1 class="titulo-secao">Programa Nacional de Crédito Fundiário (PNCF)</h1>
+    <section class="secao-imagem">
+  <h2>Trabalhos com Crédito Fundiário</h2>
+  <img src="images/credito-fundiario.png" alt="Ilustração dos trabalhos com crédito fundiário" class="imagem-ilustrativa">
+</section>
     <p>O PNCF é uma iniciativa do Governo Federal voltada ao acesso à terra para trabalhadores e trabalhadoras rurais, promovendo autonomia, segurança alimentar e fortalecimento da agricultura familiar.</p>
     
     <h2 class="titulo-secao">Objetivo</h2>
