Atualização geral: imagens, serviços prestados e ajustes visuais

--- a/certificados.html
+++ b/certificados.html
@@ -26,7 +26,13 @@
 
     <main class="pagina-conteudo">
         <h1 class="titulo-secao">Certificados e Reconhecimentos</h1>
-        <p>A SECAF orgulha-se de seu compromisso com a excelência no atendimento às demandas da agricultura familiar. Ao longo dos anos, acumulamos certificações e reconhecimentos que refletem nossa dedicação, competência técnica e integridade nos serviços prestados.</p>
+
+         <img src="./images/certificados.png" 
+     alt="Certficados" 
+     style="width: 35%; max-width: 800px; display: block; margin: 20px auto; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
+
+        
+         <p>A SECAF orgulha-se de seu compromisso com a excelência no atendimento às demandas da agricultura familiar. Ao longo dos anos, acumulamos certificações e reconhecimentos que refletem nossa dedicação, competência técnica e integridade nos serviços prestados.</p>
 
         <h2 class="titulo-secao">Certificações Técnicas</h2>
         <ul>
@@ -51,7 +57,7 @@
         <p>Esses reconhecimentos são fruto do esforço contínuo em oferecer serviços com ética, competência e comprometimento social. Continuamos avançando para transformar o campo com responsabilidade e inovação.</p>
     
        <e/main>
-    <img src="images/certificados.png" alt="Imagem relacionada a certificados" style="display: block; margin: 20px auto; width: 50%;">
+   
 
     <footer class="rodape">
   <div class="rodape-container">
@@ -73,15 +79,19 @@
       <p><strong>Email:</strong> hawlysonac@gmail.com</p>
       <p><strong>Endereço:</strong> Dourados - MS</p>
     </div>
-  </div>
+ </div>
+    <div class="rodape-logos">
+    <img src="images/logo-crea.png" alt="CREA-MS">
+    <img src="images/logo-anater.png" alt="ANATER">
+    <img src="images/bid.png" alt="BID">
+    <img src="images/mda.jpeg" alt="MDA">
+    <img src="images/ater.png" alt="ATER">
+    <img src="images/incra.png" alt="INCRA">
+    <img src="images/dourados.png" alt="dourados">
+      </div>
   <div class="rodape-baixo">
     <p>© 2025 SECAF - Todos os direitos reservados.</p>
     <p class="creditos-site">Site desenvolvido por <strong>Renato Ferreira da Cruz</strong></p>
-  </div>
-  <div class="rodape-logos">
-    <img src="images/logo-crea.png" alt="CREA-MS">
-    <img src="images/logo-anater.png" alt="ANATER">
-    <img src="images/logo-secaf.png" alt="SECAF">
   </div>
 </footer>
   
