--- a/contato.html
+++ b/contato.html
@@ -85,14 +85,18 @@
       <p><strong>Endereço:</strong> Dourados - MS</p>
     </div>
   </div>
+    <div class="rodape-logos">
+    <img src="images/logo-crea.png" alt="CREA-MS">
+    <img src="images/logo-anater.png" alt="ANATER">
+    <img src="images/bid.png" alt="BID">
+    <img src="images/mda.jpeg" alt="MDA">
+    <img src="images/ater.png" alt="ATER">
+    <img src="images/incra.png" alt="INCRA">
+    <img src="images/dourados.png" alt="dourados">
+      </div>
   <div class="rodape-baixo">
     <p>© 2025 SECAF - Todos os direitos reservados.</p>
     <p class="creditos-site">Site desenvolvido por <strong>Renato Ferreira da Cruz</strong></p>
-  </div>
-  <div class="rodape-logos">
-    <img src="images/logo-crea.png" alt="CREA-MS">
-    <img src="images/logo-anater.png" alt="ANATER">
-    <img src="images/logo-secaf.png" alt="SECAF">
   </div>
 </footer>
 </a><!-- Ícones flutuantes das redes sociais -->
