--- a/laudos.html
+++ b/laudos.html
@@ -25,7 +25,11 @@
   </header>
   <main class="pagina-conteudo">
   
-    <h1 class="titulo-secao">Técnicos Agrícolas</h1>
+    <h1 class="titulo-secao"> Laudos Técnicos Agrícolas</h1>
+    <img src="./images/laudos.png" 
+     alt="Laudos" 
+     style="width: 30%; max-width: 800px; display: block; margin: 20px auto; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
+
     <p>A SECAF realiza diversos tipos de laudos técnicos essenciais para comprovação, avaliação, perícia e viabilidade de atividades rurais. Esses documentos são fundamentais para garantir segurança jurídica, acessar políticas públicas e formalizar operações agrícolas.</p>
 
     <h2 class="titulo-secao">Principais Laudos Oferecidos</h2>
@@ -80,14 +84,18 @@
       <p><strong>Endereço:</strong> Dourados - MS</p>
     </div>
   </div>
+    <div class="rodape-logos">
+    <img src="images/logo-crea.png" alt="CREA-MS">
+    <img src="images/logo-anater.png" alt="ANATER">
+    <img src="images/bid.png" alt="BID">
+    <img src="images/mda.jpeg" alt="MDA">
+    <img src="images/ater.png" alt="ATER">
+    <img src="images/incra.png" alt="INCRA">
+    <img src="images/dourados.png" alt="dourados">
+      </div>
   <div class="rodape-baixo">
     <p>© 2025 SECAF - Todos os direitos reservados.</p>
     <p class="creditos-site">Site desenvolvido por <strong>Renato Ferreira da Cruz</strong></p>
-  </div>
-  <div class="rodape-logos">
-    <img src="images/logo-crea.png" alt="CREA-MS">
-    <img src="images/logo-anater.png" alt="ANATER">
-    <img src="images/logo-secaf.png" alt="SECAF">
   </div>
 </footer>
 
