--- a/recuperacao.html
+++ b/recuperacao.html
@@ -25,6 +25,10 @@
   </header>
   <main class="pagina-conteudo">
     <h1 class="titulo-secao">Recuperação de Áreas Degradadas</h1>
+    <img src="./images/recuperacao-areas.png" 
+     alt="Crédito fundiário" 
+     style="width: 35%; max-width: 800px; display: block; margin: 20px auto; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
+
     <p>A SECAF atua de forma técnica e estratégica na recuperação de áreas degradadas e alteradas (RAD), promovendo o restabelecimento da funcionalidade ambiental, produtiva e paisagística dos ecossistemas afetados.</p>
 
     <h2 class="subtitulo-secao">O que são Áreas Degradadas?</h2>
@@ -99,15 +103,19 @@
       <p><strong>Email:</strong> hawlysonac@gmail.com</p>
       <p><strong>Endereço:</strong> Dourados - MS</p>
     </div>
-  </div>
+ </div>
+    <div class="rodape-logos">
+    <img src="images/logo-crea.png" alt="CREA-MS">
+    <img src="images/logo-anater.png" alt="ANATER">
+    <img src="images/bid.png" alt="BID">
+    <img src="images/mda.jpeg" alt="MDA">
+    <img src="images/ater.png" alt="ATER">
+    <img src="images/incra.png" alt="INCRA">
+    <img src="images/dourados.png" alt="dourados">
+      </div>
   <div class="rodape-baixo">
     <p>© 2025 SECAF - Todos os direitos reservados.</p>
     <p class="creditos-site">Site desenvolvido por <strong>Renato Ferreira da Cruz</strong></p>
-  </div>
-  <div class="rodape-logos">
-    <img src="images/logo-crea.png" alt="CREA-MS">
-    <img src="images/logo-anater.png" alt="ANATER">
-    <img src="images/logo-secaf.png" alt="SECAF">
   </div>
 </footer>
  
