--- a/servicos-prestados.html
+++ b/servicos-prestados.html
@@ -25,6 +25,16 @@
     </header>
     <main class="pagina-conteudo">
         <main class="pagina-conteudo">
+    <section style="max-width: 960px; margin: 0 auto; padding: 40px 20px;">
+  <h1 style="color: #0A621C; text-align: center; font-size: 2.2em; margin-bottom: 10px;">
+    Serviços Prestados
+  </h1>
+  <hr style="width: 80px; height: 4px; background-color: #0A621C; border: none; margin: 0 auto 30px;">
+</section>
+          <img src="./images/servicos-prestados.png" 
+     alt="Técnico da SECAF plantando muda para recuperação de área degradada" 
+     style="width: 35%; max-width: 800px; display: block; margin: 20px auto; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
+
 
         <section>
             <h2 class="subtitulo-secao">Programa Frango Vida</h2>
@@ -52,6 +62,10 @@
                 Foram promovidas oficinas de agroecologia, produção de hortas comunitárias, criação de pequenos animais e inclusão socioprodutiva,
                 respeitando os saberes tradicionais e a cultura local.
             </p>
+            <img src="./images/equipe.jpg" 
+     alt="Descrição da imagem aqui" 
+     style="width: 50%; max-width: 800px; display: block; margin: 20px auto; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
+
         </section>
     </main>
     <footer class="rodape">
@@ -75,14 +89,18 @@
       <p><strong>Endereço:</strong> Dourados - MS</p>
     </div>
   </div>
+    <div class="rodape-logos">
+    <img src="images/logo-crea.png" alt="CREA-MS">
+    <img src="images/logo-anater.png" alt="ANATER">
+    <img src="images/bid.png" alt="BID">
+    <img src="images/mda.jpeg" alt="MDA">
+    <img src="images/ater.png" alt="ATER">
+    <img src="images/incra.png" alt="INCRA">
+    <img src="images/dourados.png" alt="dourados">
+      </div>
   <div class="rodape-baixo">
     <p>© 2025 SECAF - Todos os direitos reservados.</p>
     <p class="creditos-site">Site desenvolvido por <strong>Renato Ferreira da Cruz</strong></p>
-  </div>
-  <div class="rodape-logos">
-    <img src="images/logo-crea.png" alt="CREA-MS">
-    <img src="images/logo-anater.png" alt="ANATER">
-    <img src="images/logo-secaf.png" alt="SECAF">
   </div>
 </footer>
   
