--- a/credito-fundiario.html
+++ b/credito-fundiario.html
@@ -26,8 +26,11 @@
   <main class="pagina-conteudo">
     <h1 class="titulo-secao">Programa Nacional de Crédito Fundiário (PNCF)</h1>
     <section class="secao-imagem">
-  <h2>Trabalhos com Crédito Fundiário</h2>
-  <img src="images/credito-fundiario.png" alt="Ilustração dos trabalhos com crédito fundiário" class="imagem-ilustrativa">
+  
+ <img src="./images/credito-fundiario.png" 
+     alt="Crédito fundiário" 
+     style="width: 35%; max-width: 800px; display: block; margin: 20px auto; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
+
 </section>
     <p>O PNCF é uma iniciativa do Governo Federal voltada ao acesso à terra para trabalhadores e trabalhadoras rurais, promovendo autonomia, segurança alimentar e fortalecimento da agricultura familiar.</p>
     
@@ -55,7 +58,8 @@
     <h2 class="titulo-secao">Mais informações</h2>
     <p>Para detalhes completos sobre regras, requisitos e como participar do programa, consulte o manual oficial clicando no botão abaixo:</p>
     
-    <p><a href="manual-pncf.pdf" target="_blank" style="background:#0A621C;color:white;padding:10px 20px;text-decoration:none;border-radius:5px;">📄 Acessar Manual do PNCF</a></p>
+
+    <p><a href="manual-pnfc.pdf" target="_blank" style="background:#0A621C;color:white;padding:10px 20px;text-decoration:none;border-radius:5px;">📄 Acessar Manual do PNCF</a></p>
   </main>
  <footer class="rodape">
   <div class="rodape-container">
@@ -78,14 +82,18 @@
       <p><strong>Endereço:</strong> Dourados - MS</p>
     </div>
   </div>
+    <div class="rodape-logos">
+    <img src="images/logo-crea.png" alt="CREA-MS">
+    <img src="images/logo-anater.png" alt="ANATER">
+    <img src="images/bid.png" alt="BID">
+    <img src="images/mda.jpeg" alt="MDA">
+    <img src="images/ater.png" alt="ATER">
+    <img src="images/incra.png" alt="INCRA">
+    <img src="images/dourados.png" alt="dourados">
+      </div>
   <div class="rodape-baixo">
     <p>© 2025 SECAF - Todos os direitos reservados.</p>
     <p class="creditos-site">Site desenvolvido por <strong>Renato Ferreira da Cruz</strong></p>
-  </div>
-  <div class="rodape-logos">
-    <img src="images/logo-crea.png" alt="CREA-MS">
-    <img src="images/logo-anater.png" alt="ANATER">
-    <img src="images/logo-secaf.png" alt="SECAF">
   </div>
 </footer>
 
