--- a/credito-rural.html
+++ b/credito-rural.html
@@ -25,6 +25,11 @@
   </header>
   <main class="pagina-conteudo">
     <h1 class="titulo-secao">Crédito Rural</h1>
+
+    <img src="./images/credito-rural.png" 
+     alt="Crédito Rural" 
+     style="width: 35%; max-width: 800px; display: block; margin: 20px auto; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
+
     <p>O Crédito Rural é uma política pública essencial para o desenvolvimento da agropecuária nacional, proporcionando recursos para custeio, investimento, comercialização e industrialização da produção agropecuária.</p>
 
     <h2 class="titulo-secao">Objetivo</h2>
@@ -117,14 +122,18 @@
       <p><strong>Endereço:</strong> Dourados - MS</p>
     </div>
   </div>
+    <div class="rodape-logos">
+    <img src="images/logo-crea.png" alt="CREA-MS">
+    <img src="images/logo-anater.png" alt="ANATER">
+    <img src="images/bid.png" alt="BID">
+    <img src="images/mda.jpeg" alt="MDA">
+    <img src="images/ater.png" alt="ATER">
+    <img src="images/incra.png" alt="INCRA">
+    <img src="images/dourados.png" alt="dourados">
+      </div>
   <div class="rodape-baixo">
     <p>© 2025 SECAF - Todos os direitos reservados.</p>
     <p class="creditos-site">Site desenvolvido por <strong>Renato Ferreira da Cruz</strong></p>
-  </div>
-  <div class="rodape-logos">
-    <img src="images/logo-crea.png" alt="CREA-MS">
-    <img src="images/logo-anater.png" alt="ANATER">
-    <img src="images/logo-secaf.png" alt="SECAF">
   </div>
 </footer>
   
