--- a/projetos-prefeitura.html
+++ b/projetos-prefeitura.html
@@ -25,6 +25,10 @@
   </header>
   <main class="pagina-conteudo">
     <h1 class="titulo-secao">Projetos para Prefeituras</h1>
+    <img src="./images/prefeitura.png" 
+     alt="prefeitura" 
+     style="width: 35%; max-width: 800px; display: block; margin: 20px auto; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
+
     <p>A SECAF atua como parceira estratégica de prefeituras e secretarias municipais no desenvolvimento, execução e acompanhamento de projetos voltados ao meio rural, meio ambiente e infraestrutura agrícola. Nosso foco é proporcionar soluções técnicas, sustentáveis e eficientes para políticas públicas no campo.</p>
 
     <h2 class="titulo-secao">O que a SECAF pode oferecer para Prefeituras</h2>
@@ -89,15 +93,19 @@
       <p><strong>Email:</strong> hawlysonac@gmail.com</p>
       <p><strong>Endereço:</strong> Dourados - MS</p>
     </div>
-  </div>
+ </div>
+    <div class="rodape-logos">
+    <img src="images/logo-crea.png" alt="CREA-MS">
+    <img src="images/logo-anater.png" alt="ANATER">
+    <img src="images/bid.png" alt="BID">
+    <img src="images/mda.jpeg" alt="MDA">
+    <img src="images/ater.png" alt="ATER">
+    <img src="images/incra.png" alt="INCRA">
+    <img src="images/dourados.png" alt="dourados">
+      </div>
   <div class="rodape-baixo">
     <p>© 2025 SECAF - Todos os direitos reservados.</p>
     <p class="creditos-site">Site desenvolvido por <strong>Renato Ferreira da Cruz</strong></p>
-  </div>
-  <div class="rodape-logos">
-    <img src="images/logo-crea.png" alt="CREA-MS">
-    <img src="images/logo-anater.png" alt="ANATER">
-    <img src="images/logo-secaf.png" alt="SECAF">
   </div>
 </footer>
   
