--- a/seguros-agricolas.html
+++ b/seguros-agricolas.html
@@ -25,6 +25,11 @@
     </header>
     <main class="pagina-conteudo">
   <h1 class="titulo-secao">Seguros Agrícolas</h1>
+
+  <img src="./images/seguro-agricola.png" 
+     alt="Descrição da imagem aqui" 
+     style="width: 30%; max-width: 800px; display: block; margin: 20px auto; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
+
   <p>O seguro agrícola é uma ferramenta essencial para a proteção da produção rural contra perdas decorrentes de fatores climáticos, pragas, doenças e outros riscos...</p>
 
   <h2 class="subtitulo-secao">Tipos de Seguros Agrícolas</h2>
@@ -66,15 +71,19 @@
       <p><strong>Email:</strong> hawlysonac@gmail.com</p>
       <p><strong>Endereço:</strong> Dourados - MS</p>
     </div>
-  </div>
+ </div>
+    <div class="rodape-logos">
+    <img src="images/logo-crea.png" alt="CREA-MS">
+    <img src="images/logo-anater.png" alt="ANATER">
+    <img src="images/bid.png" alt="BID">
+    <img src="images/mda.jpeg" alt="MDA">
+    <img src="images/ater.png" alt="ATER">
+    <img src="images/incra.png" alt="INCRA">
+    <img src="images/dourados.png" alt="dourados">
+      </div>
   <div class="rodape-baixo">
     <p>© 2025 SECAF - Todos os direitos reservados.</p>
     <p class="creditos-site">Site desenvolvido por <strong>Renato Ferreira da Cruz</strong></p>
-  </div>
-  <div class="rodape-logos">
-    <img src="images/logo-crea.png" alt="CREA-MS">
-    <img src="images/logo-anater.png" alt="ANATER">
-    <img src="images/logo-secaf.png" alt="SECAF">
   </div>
 </footer>
     
