Atualização geral: imagens, serviços prestados e ajustes visuais

--- a/sobre.html
+++ b/sobre.html
@@ -58,6 +58,10 @@
   </ul>
 
   <p>Mais do que uma empresa de consultoria, a SECAF é parceira do homem e da mulher do campo...</p>
+<img src="./images/equipe.jpg" 
+     alt="Descrição da imagem aqui" 
+     style="width: 100%; max-width: 800px; display: block; margin: 20px auto; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
+
 </main>
 
 <!-- Ícones flutuantes das redes sociais -->
