--- a/certificados.html
+++ b/certificados.html
@@ -80,7 +80,7 @@
       <p><strong>Endereço:</strong> Dourados - MS</p>
     </div>
  </div>
-    <div class="rodape-coluna">
+    <div class="rodape-logos">
     <img src="images/logo-crea.png" alt="CREA-MS">
     <img src="images/logo-anater.png" alt="ANATER">
     <img src="images/bid.png" alt="BID">
